doc fix for create and delete user routes
